# gt7-race-engineer

./: .dockerignore  .env.example  DISCORD_SETUP.md  Dockerfile  INSTALL.md  PARTY_SETUP.md  QUICKSTART.md  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml  requirements.txt  run.sh
.github/workflows/: build-desktop.yml
app/: adapters.py  analysis.py  callouts.py  catalog.py  config.py  desktop.py  discord_engineer.py  discovery.py  engineer.py  events.py  local_voice.py  model.py  providers.py  server.py  session_store.py  stt.py  track_store.py  tts.py  voice_intent.py
app/static/: catalog.json  index.html  manifest.webmanifest  sw.js
flutter/: README.md  analysis_options.yaml  pubspec.yaml
flutter/assets/: catalog.json
flutter/lib/: main.dart
flutter/lib/app/: analysis_screen.dart  app_state.dart  history_screen.dart  home_screen.dart  session_sheet.dart  tts_speaker.dart
flutter/lib/core/: analysis.dart  callouts.dart  capture.dart  catalog.dart  demo.dart  discovery.dart  engineer.dart  events.dart  model.dart  packet.dart  salsa20.dart
flutter/test/: core_smoke_test.dart
flutter/tool/parity/: run_parity.dart
flutter/tool/parity/vectors/: analysis.json  callouts.json  engineer.json  misc.json  packets.json  salsa20.json
gt7_race_engineer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
gt7dashboard/: gt7communication.py
packaging/: build_macos.sh  build_windows.bat  gt7-race-engineer.spec  make_icons.py
tools/: analyze_cli.py  gen_parity_vectors.py
