[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gt7-race-engineer"
version = "2.0.0"
description = "Live race-engineer dashboard + post-session analysis for Gran Turismo 7"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi", "uvicorn[standard]", "websockets",
  "pycryptodome", "pandas", "scipy", "tabulate", "numpy",
  "httpx", "python-dotenv", "py-cord[voice]", "PyNaCl",
]

[project.scripts]
gt7-engineer = "app.server:main"

[tool.setuptools]
packages = ["app", "gt7dashboard", "tools"]

[tool.setuptools.package-data]
app = ["static/*"]
